--- a/Form Validation/index.html
+++ b/Form Validation/index.html
@@ -15,6 +15,16 @@
   </head>
   <body>
     <div class="container">
+      <div class="content">
+        <div class="logo">
+          <img src="images/logo.svg" alt="" />
+        </div>
+        <div class="image"></div>
+        <div class="text">
+          Start for free & get <br />
+          attractive offers today !
+        </div>
+      </div>
       <form id="form">
         <div class="social">
           <div class="title">Get Started</div>
